arm64: dts: elvees: Enable I2C4 APB clock
This fixes I2C4 bus initialization failure with message:
i2c_designware 1f090000.i2c: Unknown Synopsys component type: 0x00000000

Issue: #MCOM03SW-2140
Signed-off-by: Ilya Popov <ipopov@elvees.com>
Change-Id: Ibaf1baa5afd23fe3a5816a91a83610fff1e1bfdf

--- a/arch/arm64/boot/dts/elvees/mcom03-i2c4.dtsi
+++ b/arch/arm64/boot/dts/elvees/mcom03-i2c4.dtsi
@@ -19,7 +19,9 @@
 		#size-cells = <0>;
 		compatible = "snps,designware-i2c";
 		reg = <0 0x1f090000 0 0x10000>;
-		clocks = <&service_ucg1 SERVICE_I2C4_EXT_CLK>;
+		clocks = <&service_ucg1 SERVICE_I2C4_EXT_CLK>,
+			<&service_ucg1 SERVICE_I2C4_CLK>;
+		clock-names = "ref", "pclk";
 		interrupt-parent = <&qlic0>;
 		interrupts = <37>;
 		i2c-sda-hold-time-ns = <300>;
