gpio: Add Pericom PI4IO I2C GPIO expander driver
This driver has been taken from [1].

[1] https://coral.googlesource.com/linux-imx/+/4b52de65ea7fbe5c5f009c9d9d9b78b0bdf88e03

Issue: #MCOM03SW-2140
Signed-off-by: Ilya Popov <ipopov@elvees.com>
Change-Id: I9e749de23c1ebf4ad3adc5d9da6c45654c7d7c34

--- a/drivers/gpio/Kconfig
+++ b/drivers/gpio/Kconfig
@@ -1014,6 +1014,12 @@ config GPIO_PCF857X
 	  This driver provides an in-kernel interface to those GPIOs using
 	  platform-neutral GPIO calls.
 
+config GPIO_PI4IOE5V6408
+	tristate "Pericom PI4IOE5V6408 I2C GPIO Expander"
+	select REGMAP_I2C
+	help
+	  Say yes here to enable the Pericom PI4IOE5V6408 GPIO Expander
+
 config GPIO_TPIC2810
 	tristate "TPIC2810 8-Bit I2C GPO expander"
 	help
