--- a/arch/arm64/boot/dts/elvees/mcom03-elvmc03-r2.2.dtsi
+++ b/arch/arm64/boot/dts/elvees/mcom03-elvmc03-r2.2.dtsi
@@ -9,6 +9,7 @@
 #include <dt-bindings/thermal/thermal.h>
 
 #include "mcom03.dtsi"
+#include "mcom03-i2c4.dtsi"
 
 / {
 	model = "ELV-MC03 r2.2";
@@ -117,5 +118,25 @@
 			#size-cells = <0>;
 			reg = <2>;
 		};
+	};
+};
+
+&qlic0 {
+	status = "okay";
+};
+
+&i2c4 {
+	/* Not all devices are checked to 400kHz support */
+	clock-frequency = <100000>;
+	status = "okay";
+
+	pi4ioe5v6408: gpio-expander@43 {
+		reg = <0x43>;
+		compatible = "pericom,pi4ioe5v6408";
+		gpio-controller;
+		#gpio-cells = <2>;
+		gpio-line-names = "EXGP0", "EXGP1", "EXGP2", "EXGP3", "I2S_mode",
+			"EXGP5" /* EN +3V3_ETH */, "EXGP6" /* EN +3V3_MEMIC */,
+			"EXGP7" /* EN +3V3_USB */;
 	};
 };
