--- a/arch/arm64/configs/mcom03_defconfig
+++ b/arch/arm64/configs/mcom03_defconfig
@@ -283,6 +283,7 @@ CONFIG_MCOM03_PINCTRL=y
 CONFIG_GPIO_SYSFS=y
 CONFIG_GPIO_PCA953X=y
 CONFIG_GPIO_PCA953X_IRQ=y
+CONFIG_GPIO_PI4IOE5V6408=m
 CONFIG_W1=m
 CONFIG_W1_MASTER_DS2482=m
 CONFIG_W1_SLAVE_SMEM=m
