arm64: dts: elvees: elvsmarccb: Enable MFBSP CAN0, MFBSP CAN1
MFBSP CAN0, MFBSP CAN1 are connected to XP16 socket
through CAN transceivers (MCP2562FDT-E/SN).

Issue: #MCOM03SW-2126
Change-Id: I850867a2d39010f595dd6d5e5982169a9d01e761
Signed-off-by: Ilya Orazov <iorazov@elvees.com>

--- a/arch/arm64/boot/dts/elvees/mcom03-elvmc03smarc-r1.0-elvsmarccb-r1.0.dts
+++ b/arch/arm64/boot/dts/elvees/mcom03-elvmc03smarc-r1.0-elvsmarccb-r1.0.dts
@@ -213,7 +213,16 @@
 	status = "okay";
 };
 
-/* mfbsp0 interrupt controller */
+/* Connected to XP16 socket through CAN transceiver */
+&mfbsp0_can {
+	status = "okay";
+};
+/* Connected to XP16 socket through CAN transceiver */
+&mfbsp1_can {
+	status = "okay";
+};
+
+/* mfbsp interrupt controller */
 &qlic0 {
 	status = "okay";
 };
