--- a/arch/arm64/configs/mcom03_defconfig
+++ b/arch/arm64/configs/mcom03_defconfig
@@ -71,7 +71,6 @@ CONFIG_CRYPTO_CHACHA20_NEON=y
 CONFIG_CRYPTO_AES_ARM64_BS=y
 CONFIG_KPROBES=y
 CONFIG_JUMP_LABEL=y
-# CONFIG_GCC_PLUGINS is not set
 CONFIG_MODULES=y
 CONFIG_MODULE_UNLOAD=y
 CONFIG_BLK_DEV_THROTTLING=y
@@ -110,6 +109,7 @@ CONFIG_BRIDGE_VLAN_FILTERING=y
 CONFIG_VLAN_8021Q=m
 CONFIG_CAN=m
 CONFIG_CAN_SLCAN=m
+CONFIG_CAN_MFBSP_CAN=m
 CONFIG_CAN_8DEV_USB=m
 CONFIG_CAN_EMS_USB=m
 CONFIG_CAN_ESD_USB2=m
@@ -420,15 +420,11 @@ CONFIG_SND_USB_VARIAX=m
 CONFIG_SND_SOC=m
 CONFIG_SND_DESIGNWARE_I2S=m
 CONFIG_SND_DESIGNWARE_PCM=y
+CONFIG_SND_SOC_ELVEES_MFBSP=m
+CONFIG_SND_SOC_ES8316=m
 CONFIG_SND_SOC_SGTL5000=m
 CONFIG_SND_SIMPLE_CARD=m
 CONFIG_USB_ULPI_BUS=m
-CONFIG_SND_SOC=m
-CONFIG_SND_DESIGNWARE_I2S=m
-CONFIG_SND_DESIGNWARE_PCM=y
-CONFIG_SND_SOC_ELVEES_MFBSP=m
-CONFIG_SND_SOC_ES8316=m
-CONFIG_SND_SIMPLE_CARD=m
 CONFIG_USB=y
 CONFIG_USB_ANNOUNCE_NEW_DEVICES=y
 CONFIG_USB_XHCI_HCD=y
