--- a/Documentation/devicetree/bindings/net/can/elvees,mcom03-mfbsp-can.yaml
+++ b/Documentation/devicetree/bindings/net/can/elvees,mcom03-mfbsp-can.yaml
@@ -85,16 +85,23 @@ required:
 additionalProperties: false
 examples:
   - |
-    mfbsp0_can: mfbsp@1f0a0000 {
-      compatible = "elvees,mfbsp-can";
-      reg = <0x0 0x1f0a0000 0x0 0x0200>,
-            <0x0 0x1f0a0200 0x0 0x1100>,
-            <0x0 0x1f0a1380 0x0 0x0040>;
-      reg-names = "can",
-                  "filters_and_elements",
-                  "cfg";
-      interrupt-parent = <&qlic0>;
-      interrupts = <26>;
-      clocks = <&service_ucg1 SERVICE_MFBSP0_CLK>;
-      elvees,mram-cfg = <0x0 128 64 64 32 32 64>;
+    #include <dt-bindings/clock/mcom03-clock.h>
+
+    service-bus {
+      #address-cells = <2>;
+      #size-cells = <2>;
+
+      mfbsp0_can: mfbsp@1f0a0000 {
+        compatible = "elvees,mfbsp-can";
+        reg = <0x0 0x1f0a0000 0x0 0x0200>,
+              <0x0 0x1f0a0200 0x0 0x1100>,
+              <0x0 0x1f0a1380 0x0 0x0040>;
+        reg-names = "can",
+                    "filters_and_elements",
+                    "cfg";
+        interrupt-parent = <&qlic0>;
+        interrupts = <26>;
+        clocks = <&service_ucg1 SERVICE_MFBSP0_CLK>;
+        elvees,mram-cfg = <0x0 128 64 64 32 32 64>;
+      };
     };
